src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>ACA_Policy_Script__c</fullName>
        <label>ACA Policy Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Aggression__c</fullName>
        <label>Aggression</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assignment_of_Benefits_Script__c</fullName>
        <label>Assignment of Benefits Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Determination_Script__c</fullName>
        <label>Determination Script</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>